# Learncpp

./: CMake Template.txt  Design Process Steps Summary.txt
Section_01/HelloWorld/: CMakeLists.txt  main.cpp
Section_01/Multiply_By_2/: CMakeLists.txt  main.cpp
Section_01/PrintStandard/: CMakeLists.txt
Section_01/Variable_Assignment_and_Initialization/: CMakeLists.txt  main.cpp
Section_02/: Header_File_Best_Practices.txt
Section_02/Chapter_02_Summary/: CMakeLists.txt  io.cpp  io.h  main.cpp
Section_02/Forward_Declarations_and_Definitions/: CMakeLists.txt  main.cpp
Section_02/Function_Params_and_Arguments/: CMakeLists.txt  main.cpp
Section_03/Conditionalized_Debugging/: CMakeLists.txt  main.cpp
Section_03/Logger_Debugging/: CMakeLists.txt  main.cpp
Section_04/Boolean_Values/: CMakeLists.txt  main.cpp
Section_04/Chapter_04_Summary/: BallDrop.cpp  BallDrop.h  CMakeLists.txt  CalcDoubles.cpp  CalcDoubles.h  main.cpp
Section_04/Fixed_Width_Integers_and_Size_t/: CMakeLists.txt  main.cpp
Section_04/Floating_Point_Numbers/: CMakeLists.txt  main.cpp
Section_04/Modulo_Wrapping/: CMakeLists.txt  main.cpp
Section_04/Sizeof_Operator/: CMakeLists.txt  main.cpp
Section_05/Intro_to_Stdstring/: CMakeLists.txt  main.cpp
Section_06/Chapter_06_Summary/: CMakeLists.txt  main.cpp
Section_07/Chapter_7_Summary/: CMakeLists.txt  constants.h  main.cpp
Section_08/Chapter_08_Summary/: CMakeLists.txt  main.cpp
Section_08/Generating_Random_Numbers_Using_Mersenne_Twister/: CMakeLists.txt  main.cpp
Section_08/Global_Random_Numbers_Random_h/: CMakeLists.txt  Random.h  main.cpp
Section_09/Assert_and_Static_Assert/: CMakeLists.txt  main.cpp
Section_09/Stdcin_and-Handling_Invalid_Input/: CMakeLists.txt  main.cpp
Section_12/Chapter_12_Summary/: CMakeLists.txt  main.cpp
Section_12/Introduction_to_Pointers/: CMakeLists.txt  main.cpp
Section_12/Pass_By_Const_Lvalue_Reference/: CMakeLists.txt  main.cpp
Section_12/Stdoptional/: CMakeLists.txt  main.cpp
Section_13/Alias_Templates/: CMakeLists.txt  main.cpp
Section_13/Class_Templates/: CMakeLists.txt  foo.cpp  main.cpp  pair.h
Section_13/Converting_An_Enumeration_To_and_From_a_String/: CMakeLists.txt  main.cpp
Section_13/Introduction_to_Overloading_the_I_O_Operators/: CMakeLists.txt  main.cpp
Section_13/Unscoped_Enumerations/: CMakeLists.txt  main.cpp
Section_14/Chapter_14_Summary/: CMakeLists.txt  main.cpp
Section_14/Constructor_Member_Initializer_Lists/: CMakeLists.txt  main.cpp
Section_15/Chapter_15_Summary/: CMakeLists.txt  main.cpp
Section_15/Class_Templates_With_Member_Functions/: CMakeLists.txt  main.cpp
Section_15/Classes_and_Header_Files/: CMakeLists.txt  Date.cpp  Date.h
Section_15/Friend_Classes_and_Friend_Member_Functions/: CMakeLists.txt  main.cpp
Section_15/Friend_Non_Member_Functions/: CMakeLists.txt  main.cpp
Section_15/Introduction_to_Destructors/: CMakeLists.txt  main.cpp
Section_15/Nested_Types_Member_Types/: CMakeLists.txt  main.cpp
Section_15/Ref_Qualifiers/: CMakeLists.txt  main.cpp
Section_15/Static_Member_Functions/: CMakeLists.txt  main.cpp
Section_15/Static_Member_Variables/: CMakeLists.txt  main.cpp
Section_15/The_Hidden_This_Pointer_and_Member_Function_Chaining/: CMakeLists.txt  main.cpp
Section_16/Arrays_Loops_and_Sign_Challenge_Solutions/: CMakeLists.txt  SignedArrayView.h  main.cpp
Section_16/Arrays_and_Loops/: CMakeLists.txt  main.cpp
Section_16/Chapter_16_Summary/: CMakeLists.txt  main.cpp
Section_16/Stdvector_and_Stack_Behavior/: CMakeLists.txt  main.cpp
Section_17/Blackjack/: CMakeLists.txt
Section_17/Chapter_17_Summary/: CMakeLists.txt  main.cpp
Section_17/Stdarray_of_Class_Types_and-_Brace_Elision/: CMakeLists.txt  main.cpp
Section_18/Introduction_to_Iterators/: CMakeLists.txt  main.cpp
Section_18/Introduction_to_Standard_Library_Algorithms/: CMakeLists.txt  main.cpp
Section_18/Sorting_An_Array_Using_Selection_Sort/: CMakeLists.txt  main.cpp
Section_18/Timing_Your_Code/: CMakeLists.txt  Timer.h  main.cpp
Section_19/Destructors/: CMakeLists.txt  main.cpp
Section_19/Dynamic_Memory_Allocation_With_New_and_Delete/: CMakeLists.txt  main.cpp
Section_19/Dynamically_Allocating_Arrays/: CMakeLists.txt  main.cpp
Section_19/Pointers_to_Pointers/: CMakeLists.txt  main.cpp
Section_19/Void_Pointers/: CMakeLists.txt  main.cpp
Section_20/Chapter_20_Summary/: CMakeLists.txt  main.cpp
Section_20/Command_Line_Arguments/: CMakeLists.txt  main.cpp
Section_20/Ellipsis_and_Why_to_Avoid_Them/: CMakeLists.txt  main.cpp
Section_20/Function_Pointers/: CMakeLists.txt  main.cpp
Section_20/Introduction_to_Lambdas_Anonymous_Functions/: CMakeLists.txt  main.cpp
Section_20/Lambda_Captures/: CMakeLists.txt  main.cpp
Section_20/Recursion/: CMakeLists.txt  main.cpp
Section_21/Chapter_21_Summary/: CMakeLists.txt  main.cpp
Section_22/Circular_Dependency_Issues_With_Stdshared_Ptr_and_Stdweak_Ptr/: CMakeLists.txt  main.cpp
Section_22/Introduction_to_Smart_Pointers_Move_Semantics/: CMakeLists.txt  main.cpp
Section_22/Move_Constructors_and_Move_Assignment/: CMakeLists.txt  main.cpp
Section_22/Rvalue_References/: CMakeLists.txt  main.cpp
Section_22/Stdmove/: CMakeLists.txt  main.cpp
Section_22/Stdshared_Ptr/: CMakeLists.txt  main.cpp
Section_22/Stdunique_Ptr/: CMakeLists.txt  main.cpp
Section_23/Aggregation/: CMakeLists.txt  main.cpp
Section_23/Association/: CMakeLists.txt  main.cpp
Section_23/Chapter_23_Summary/: CMakeLists.txt  main.cpp
Section_23/Composition/: CMakeLists.txt  Creature.h  Point2D.h  main.cpp
Section_23/Container_Classes/: CMakeLists.txt  IntArray.h  main.cpp
Section_23/Dependencies/: CMakeLists.txt  main.cpp
Section_23/Stdinitializer_List/: CMakeLists.txt  main.cpp
Section_24/Inheritance_and_Access_Specifiers/: CMakeLists.txt  main.cpp
Section_24/Multiple_Inheritance/: CMakeLists.txt  main.cpp
Section_25/Printing_Inherited_Classes_Using_Operator/: CMakeLists.txt  main.cpp
Section_25/Pure_Virtual_Functions_Abstract_Base_Classes_and_Interface_Classes/: CMakeLists.txt  main.cpp
(+40 files in other folders)
